<resources>
    <string name="app_name">ConcesionarioCoches</string>
    <string name="preferenceLogin">>PreferencesLogin</string>
    <string name="welcomeMain">Regístrate o accede a tu cuenta. ¡Fácil y rápido!</string>

    <string name="sinAccount">¿Sin cuenta? Regístrate</string>
    <string name="Registrar">Registrar</string>


    <!-- MENSAJE ERRORES -->
    <string name="catchError">Lo sentimos. Hubo un error :(</string>

    <!-- PLACEHOLDERS -->
    <string name="hintEmail">Email</string>
    <string name="hintNick">Nombre de usuario</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintApellido_1">Primer Apellido</string>
    <string name="hintApellido_2">Segundo Apellido</string>
    <string name="fieldObligatorio">*</string>
    <string name="catalogoCoches">Catálogo Vehículos</string>

    <string name="hintRol_name">Rol</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="misCompras">Mi Carrito</string>
    <string name="misVentas">Mis Ventas</string>
    <string name="Logout">Salir</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Borrar">Borrar</string>
    <string name="Galeria">Galeria</string>
    <string name="upload">Subir imagen</string>
    <string name="btnimgProfile">Gestionar Imagen Perfil</string>
    <string name="deleteImage">¿Quieres borrar la foto de perfil?</string>
    <string name="msgCatalogoVehiculos">Lo sentimos, No hay ningun vehículo en catalogo</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="comprar">Añadir a cesta</string>
    <string name="title_activity_cesta">Carrito</string>

    <string name="titleCesta">Carrito</string>
    <string name="cestaVacia">No hay ningun elemento en la cesta</string>
    <string name="btnBorrardeCesta">Eliminar de Cesta</string>
    <string name="updateProfileSuccessful">Perfil actualizado correctamente</string>
    <string name="ContentImage">Imagen</string>
    <string name="titleMainActivity">JoCars</string>
    <string name="login">Inicia Sesión</string>
    <string name="hintPassword">Contraseña</string>
    <string name="credenciales_no_validas">Credenciales no válidas</string>
    <string name="hintIniciaSesion">Inicia Sesión</string>
    <string name="logOutConfirm">"¿Desea cerrar sesión?"</string>
    <string name="deleteCartDialog">¿Seguro que desea eliminar del carrito?</string>
    <string name="imgBorradaExito"> Imagen borrada con éxito</string>
</resources>