<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopri">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="@dimen/anchuraTituloMain"
        android:layout_height="@dimen/alturaTituloMain"
        android:layout_marginTop="@dimen/dim52"
        android:gravity="center"
        android:text="@string/welcomeMain"
        android:textColor="@color/white"
        android:textSize="@dimen/titulosPrincipales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/anchuraBotones"
        android:layout_height="@dimen/alturaBotones"
        android:layout_marginTop="@dimen/dim244"
        android:backgroundTint="@color/ColorPrincipal"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="@dimen/anchuraBotones"
        android:layout_height="@dimen/alturaBotones"
        android:layout_marginTop="@dimen/dim52"
        android:backgroundTint="@color/ColorPrincipal"
        android:text="@string/Registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>